[package]
name = "korangar-network-client"
version = "0.1.0"
edition = "2024"

[dependencies]
korangar-gameplay = { workspace = true }
ragnarok-bytes = { workspace = true }
ragnarok-packets = { workspace = true }
tokio = { workspace = true, features = ["rt", "io-util", "net", "macros", "sync", "time"] }

[dev-dependencies]
korangar-debug = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
